z-index fixed

--- a/sass/components/_modal_form.scss
+++ b/sass/components/_modal_form.scss
@@ -60,7 +60,7 @@ label {
   border: 1px solid rgba(0, 0, 0, 0.582);
   display: flex;
   position: absolute;
-  
+  z-index: 3;
 
  
 
